# EmbCaffe

./: .gitignore  LICENSE  README.md
demo/: a.out  build.sh
demo/lib/: init_run.sh
embcaffe/: CMakeLists.txt  Makefile  Makefile.config
embcaffe/cmake/: Cuda.cmake  Dependencies.cmake  ProtoBuf.cmake  Summary.cmake  Targets.cmake
embcaffe/cmake/Modules/: FindGFlags.cmake  FindGlog.cmake  FindOpenBLAS.cmake
embcaffe/cmake/Templates/: caffe_config.h.in
embcaffe/include/caffe/: blob.hpp  caffe.hpp  common.hpp  internal_thread.hpp  layer.hpp  net.hpp  parallel.hpp  solver.hpp  syncedmem.hpp  ycm_defines.h
embcaffe/include/caffe/layers/: detection_output_layer.hpp  loss_layer.hpp  multibox_loss_layer.hpp  normalize_layer.hpp  permute_layer.hpp  prior_box_layer.hpp  roi_pooling_layer.hpp  rpn_layer.hpp
embcaffe/include/caffe/util/: bbox_util.hpp  benchmark.hpp  blocking_queue.hpp  db.hpp  hdf5.hpp  im2col.hpp  io.hpp  math_functions.hpp  performance.hpp  signal_handler.h
embcaffe/src/caffe/: CMakeLists.txt  blob.cpp  common.cpp  net.cpp
embcaffe/src/caffe/layers/: absval_layer.cpp  bnll_layer.cu  detection_output_layer.cpp  detection_output_layer.cu  loss_layer.cpp  multibox_loss_layer.cpp  normalize_layer.cpp  normalize_layer.cu  permute_layer.cpp  prior_box_layer.cpp  rpn_layer.cpp
embcaffe/src/caffe/proto/: caffe.proto
embcaffe/src/caffe/util/: bbox_util.cpp  bbox_util.cu  hdf5.cpp  im2col.cpp  io.cpp  math_functions.cpp  math_functions.cu  signal_handler.cpp
examples/: CMakeLists.txt  README.md  a.out  build.sh  build_ssd.sh  demo_faster_rcnn_detect.cpp  demo_ssd_detect.cpp
examples/ssd/: list.txt
models/faster-rcnn/two_class/: test.prototxt
models/ssd/vgg/: .gitignore  UMDFace_net_train_test.prototxt
weights/faster-rcnn/basketball/: download_faster_rcnn_iter_5000.link
weights/ssd/: download_ssd_300x300_iter_120000.link
